--- a/roles/install-pkgs/tasks/main.yaml
+++ b/roles/install-pkgs/tasks/main.yaml
@@ -6,10 +6,15 @@
   become: yes
   become_user: aur_builder
 
-# Needed to support syncrhonize task
-- name: install rsync
+
+- name: install package
   kewlfft.aur.aur:
-    name: rsync
+    name: "{{ item }}"
     state: present
+  with_items:
+    - rsync
+    - tar
+    - zip
+    - unzip
   become: yes
   become_user: aur_builder
