--- a/roles/install-pi-hole/tasks/main.yaml
+++ b/roles/install-pi-hole/tasks/main.yaml
@@ -1,14 +1,13 @@
-- name: install pi.hole
+- name: install pi.hole packages
   kewlfft.aur.aur:
-    name: pi-hole-server
+    name: "{{ item }}"
     state: present
-  become: yes
-  become_user: aur_builder
-
-- name: install pi-hole-ftl
-  kewlfft.aur.aur:
-    name: pi-hole-ftl
-    state: present
+  with_items:
+    - pi-hole-server
+    - pi-hole-ftl
+    - php-sqlite
+    - php-cgi
+    - lighttpd
   become: yes
   become_user: aur_builder
 
@@ -36,20 +35,6 @@
     line: "RATE_LIMIT=0/0"
     state: present
   become: yes
-
-- name: install php-sqlite
-  kewlfft.aur.aur:
-    name: php-sqlite
-    state: present
-  become: yes
-  become_user: aur_builder
-
-- name: install lighttpd
-  kewlfft.aur.aur:
-    name: lighttpd
-    state: present
-  become: yes
-  become_user: aur_builder
 
 - name: Copy lighttpd config file from pi.hole
   ansible.builtin.copy:
@@ -87,6 +72,20 @@
     section: "PHP"
     option: "open_basedir"
     value: "/srv/http/pihole:/run/pihole-ftl/pihole-FTL.port:/run/log/pihole/pihole.log:/run/log/pihole-ftl/pihole-FTL.log:/etc/pihole:/etc/hosts:/etc/hostname:/etc/dnsmasq.d/02-pihole-dhcp.conf:/etc/dnsmasq.d/03-pihole-wildcard.conf:/etc/dnsmasq.d/04-pihole-static-dhcp.conf:/var/log/lighttpd/error-pihole.log:/proc/loadavg:/proc/meminfo:/proc/cpuinfo:/sys/class/thermal/thermal_zone0/temp:/tmp"
+
+- name: Enabled extensions
+  become: true
+  ini_file:
+    dest: /etc/php/php.ini
+    section: "PHP"
+    exclusive: false
+    no_extra_spaces: true
+    option: "extension"
+    value: "{{ item }}"
+  with_items:
+    - sqlite3
+    - pdo_sqlite
+    - sockets
 
 - name: Start pi-hole
   systemd:
