Add configuration for keycloak

--- a/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
+++ b/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
@@ -101,3 +101,24 @@ backend static
     timeout     connect 5s
     timeout     server  5s
     server      static 127.0.0.1:4331 check
+
+#---------------------------------------------------------------------
+# Proxys to the sso server
+#---------------------------------------------------------------------
+frontend sso_ssl
+        bind :8443
+        mode tcp
+        option tcplog
+
+        # Wait for a client hello for at most 5 seconds
+        tcp-request inspect-delay 5s
+        tcp-request content accept if { req_ssl_hello_type 1 }
+
+        use_backend sso_ssl if { req_ssl_sni -i sso.ocplab.com }
+
+        default_backend static
+
+backend sso_ssl
+        mode tcp
+        balance roundrobin
+        server sso_ssl_server 192.168.1.2:8443 check
