--- a/configure-infra-server.yaml
+++ b/configure-infra-server.yaml
@@ -12,3 +12,5 @@
     - {role: install-haproxy}
     - {role: install-glauth}
     - {role: install-upsnap}
+    # - {role: install-postgresql}
+    # - {role: install-keycloak}
