--- a/configure-infra-server.yaml
+++ b/configure-infra-server.yaml
@@ -2,6 +2,10 @@
   hosts: infra-server
   vars:
     infra_server_hostname: infra-server
+    ler53_route_53_domain: ocplab.com
+    ler53_route_53_zone_id: Z1LKUX3GLO9GW9
+    ler53_cert_common_name: sso.ocplab.com
+
   vars_files:
     -  vars/protected.yaml
 
@@ -12,5 +16,6 @@
     - {role: install-haproxy}
     - {role: install-glauth}
     - {role: install-upsnap}
-    # - {role: install-postgresql}
-    # - {role: install-keycloak}
+    # - {role: mprahl.lets-encrypt-route-53, become: yes}
+    - {role: install-postgresql}
+    - {role: install-keycloak}
