--- a/roles/install-keycloak/templates/etc/keycloak/keycloak.conf
+++ b/roles/install-keycloak/templates/etc/keycloak/keycloak.conf
@@ -12,10 +12,7 @@ db-username={{ keycloak_db_username }}
 db-password={{ keycloak_db_password }}
 
 # The full database JDBC URL. If not provided, a default URL is set based on the selected database vendor.
-db-url=jdbc:postgresql://localhost/keycloak
-
-#db-url=protocol//[host][/database]
-db-url=jdbc:postgresql://localhost:3306/keycloak
+db-url=jdbc:postgresql://localhost:5432/keycloak
 
 # Observability
 
@@ -29,9 +26,11 @@ metrics-enabled=true
 
 # The file path to a server certificate or certificate chain in PEM format.
 #https-certificate-file=${kc.home.dir}conf/server.crt.pem
+https-certificate-file=/etc/ssl/sso.ocplab.com/sso.ocplab.com.pem
 
 # The file path to a private key in PEM format.
 #https-certificate-key-file=${kc.home.dir}conf/server.key.pem
+https-certificate-key-file=/etc/ssl/sso.ocplab.com/sso.ocplab.com.key
 
 # The proxy address forwarding mode if the server is behind a reverse proxy.
 #proxy=reencrypt
