--- a/roles/install-pi-hole/files/etc/dnsmasq.d/02-openshift.conf
+++ b/roles/install-pi-hole/files/etc/dnsmasq.d/02-openshift.conf
@@ -2,3 +2,4 @@ address=/api.home.ocplab.com/192.168.1.83
 address=/.apps.home.ocplab.com/192.168.1.83
 address=/api.hub.ocplab.com/192.168.1.217
 address=/.apps.hub.ocplab.com/192.168.1.217
+address=/sso.ocplab.com/192.168.1.2
