Change keycloak config so haproxy proxies

--- a/roles/install-keycloak/templates/etc/keycloak/keycloak.conf
+++ b/roles/install-keycloak/templates/etc/keycloak/keycloak.conf
@@ -33,10 +33,11 @@ https-certificate-file=/etc/ssl/sso.ocplab.com/sso.ocplab.com.pem
 https-certificate-key-file=/etc/ssl/sso.ocplab.com/sso.ocplab.com.key
 
 # The proxy address forwarding mode if the server is behind a reverse proxy.
-#proxy=reencrypt
+proxy=passthrough
 
 # Do not attach route to cookies and rely on the session affinity capabilities from reverse proxy
 #spi-sticky-session-encoder-infinispan-should-attach-route=false
 
 # Hostname for the Keycloak server.
-hostname=sso.ocplab.com
+#hostname=sso.ocplab.com
+hostname-url=https://sso.ocplab.com
