--- a/roles/install-glauth/templates/config.cfg
+++ b/roles/install-glauth/templates/config.cfg
@@ -30,6 +30,7 @@ debug = true
 
 [[users]]
   name = "admin"
+  email = "gnunn+admin@redhat.com"
   uidnumber = 5003
   primarygroup = 5552
   passsha256 = "{{ admin_password_hashed }}"
@@ -37,30 +38,35 @@ debug = true
 
 [[users]]
   name = "user1"
+  email = "gnunn+user1@redhat.com"
   uidnumber = 5004
   primarygroup = 5553
   passsha256 = "{{ user_password_hashed }}"
 
 [[users]]
   name = "user2"
+  email = "gnunn+user2@redhat.com"
   uidnumber = 5005
   primarygroup = 5553
   passsha256 = "{{ user_password_hashed }}"
 
 [[users]]
   name = "user3"
+  email = "gnunn+user3@redhat.com"
   uidnumber = 5006
   primarygroup = 5553
   passsha256 = "{{ user_password_hashed }}"
 
 [[users]]
   name = "user4"
+  email = "gnunn+user4@redhat.com"
   uidnumber = 5007
   primarygroup = 5553
   passsha256 = "{{ user_password_hashed }}"
 
 [[users]]
   name = "user5"
+  email = "gnunn+user5@redhat.com"
   uidnumber = 5008
   primarygroup = 5553
   passsha256 = "{{ user_password_hashed }}"
