Fix issues with terminating SSL

--- a/configure-infra-server.yaml
+++ b/configure-infra-server.yaml
@@ -4,7 +4,6 @@
     infra_server_hostname: infra-server
     ler53_route_53_domain: ocplab.com
     ler53_route_53_zone_id: Z1LKUX3GLO9GW9
-    ler53_cert_common_name: sso.ocplab.com
 
   vars_files:
     -  vars/protected.yaml
@@ -12,11 +11,13 @@
   roles:
     - {role: aur-builder-user}
     - {role: install-pkgs}
-    - {role: install-dashy}
     - {role: install-pi-hole}
     - {role: install-haproxy}
     - {role: install-glauth}
     - {role: install-upsnap}
-    - {role: mprahl.lets-encrypt-route-53, become: yes}
+    - {role: mprahl.lets-encrypt-route-53, ler53_cert_common_name: sso.ocplab.com, become: yes}
+    - {role: mprahl.lets-encrypt-route-53, ler53_cert_common_name: uptime.ocplab.com, become: yes}
     - {role: install-postgresql}
     - {role: install-keycloak}
+    - {role: install-dashy}
+    - {role: install-uptime-kuma}
