--- a/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
+++ b/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
@@ -69,7 +69,7 @@ backend hub_http
         server hub_http_server 192.168.1.217:80 check
 
 #---------------------------------------------------------------------
-# Proxys to the openshift wildcard backend port 443
+# Handles port 443 for OpenShift wildcard, sso and terminating SSL for others
 #---------------------------------------------------------------------
 frontend wildcard_ssl
 	bind :443
@@ -84,18 +84,43 @@ frontend wildcard_ssl
 	use_backend hub_ssl if { req_ssl_sni -m end .apps.hub.ocplab.com }
         use_backend sso_ssl if { req_ssl_sni -i sso.ocplab.com }
 
-	default_backend static
+        # Route back to haproxy to handle SSL termination for non-passthrough sites
+	default_backend bk_tcp_to_https
 
+# Provide SSL Termination for sites that only handle http
+frontend SSL_Termination
+        mode http
+        bind *:9443 ssl crt /etc/ssl/uptime.ocplab.com/uptime.ocplab.com.pem
+
+        use_backend     uptime  if { hdr(host) -i uptime.ocplab.com }
+
+        default_backend static
+
+# Home OpenShift cluster
 backend home_ssl
 	mode tcp
 	balance roundrobin
 	server home_ssl_server 192.168.1.83:443 check
 
+# Hub OpenShift cluster
 backend hub_ssl
 	mode tcp
 	balance roundrobin
 	server hub_ssl_server 192.168.1.217:443 check
 
+# Uptime-kuma
+backend uptime
+        mode http
+        server uptime 192.168.1.2:3001 check
+        http-request set-header X-Forwarded-Port %[dst_port]
+        http-request add-header X-Forwarded-Proto https if { ssl_fc }
+
+# Route back to haproxy to handle ssl termination
+backend bk_tcp_to_https
+        mode tcp
+        server haproxy-https 127.0.0.1:9443 check
+
+# Fallback to static site
 backend static
     mode        http
     balance     roundrobin
