Add additional groups

--- a/roles/install-glauth/templates/config.cfg
+++ b/roles/install-glauth/templates/config.cfg
@@ -40,6 +40,7 @@ debug = true
   name = "user1"
   uidnumber = 5004
   primarygroup = 5553
+  otherGroups = [5554]
   passsha256 = "{{ user_password_hashed }}"
   mail = "gnunn+user1@redhat.com"
 
@@ -47,6 +48,7 @@ debug = true
   name = "user2"
   uidnumber = 5005
   primarygroup = 5553
+  otherGroups = [5555]
   passsha256 = "{{ user_password_hashed }}"
   mail = "gnunn+user2@redhat.com"
 
@@ -61,6 +63,7 @@ debug = true
   name = "user4"
   uidnumber = 5007
   primarygroup = 5553
+  otherGroups = [5556]
   passsha256 = "{{ user_password_hashed }}"
   mail = "gnunn+user4@redhat.com"
 
@@ -70,7 +73,6 @@ debug = true
   primarygroup = 5553
   passsha256 = "{{ user_password_hashed }}"
   mail = "gnunn+user5@redhat.com"
-
 
 [[groups]]
   name = "svcaccts"
@@ -86,3 +88,19 @@ debug = true
   name = "developers"
   gidnumber = 5553
   # Developers
+
+[[groups]]
+  name = "product-catalog-admins"
+  gidnumber = 5554
+
+[[groups]]
+  name = "product-catalog-users"
+  gidnumber = 5555
+
+[[groups]]
+  name = "rollouts-demo-admins"
+  gidnumber = 5556
+
+[[groups]]
+  name = "rollouts-demo-users"
+  gidnumber = 5556
