--- a/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
+++ b/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
@@ -5,7 +5,6 @@
 #
 #---------------------------------------------------------------------
 
-
 global
     maxconn     20000
     log         127.0.0.1 local0
@@ -82,19 +81,20 @@ frontend wildcard_ssl
 
 	use_backend home_ssl if { req_ssl_sni -m end .apps.home.ocplab.com }
 	use_backend hub_ssl if { req_ssl_sni -m end .apps.hub.ocplab.com }
-        use_backend sso_ssl if { req_ssl_sni -i sso.ocplab.com }
+    use_backend sso_ssl if { req_ssl_sni -i sso.ocplab.com }
 
-        # Route back to haproxy to handle SSL termination for non-passthrough sites
+    # Route back to haproxy to handle SSL termination for non-passthrough sites
 	default_backend bk_tcp_to_https
 
 # Provide SSL Termination for sites that only handle http
 frontend SSL_Termination
         mode http
-        bind *:9443 ssl crt /etc/ssl/uptime.ocplab.com/uptime.ocplab.com.pem
+        bind *:9443 ssl crt-list /etc/haproxy/crt-list.txt
+        #bind *:9443 ssl crt /etc/ssl/uptime.ocplab.com/uptime.ocplab.com.pem crt /etc/ssl/ocplab.com/ocplab.com.pem
 
-        use_backend     uptime  if { hdr(host) -i uptime.ocplab.com }
+        use_backend uptime if { hdr(host) -i uptime.ocplab.com }
 
-        default_backend static
+        default_backend homepage
 
 # Home OpenShift cluster
 backend home_ssl
@@ -112,6 +112,12 @@ backend hub_ssl
 backend uptime
         mode http
         server uptime 192.168.1.2:3001 check
+        http-request set-header X-Forwarded-Port %[dst_port]
+        http-request add-header X-Forwarded-Proto https if { ssl_fc }
+
+backend homepage
+        mode http
+        server homepage 192.168.1.2:7080 check
         http-request set-header X-Forwarded-Port %[dst_port]
         http-request add-header X-Forwarded-Proto https if { ssl_fc }
 
