Enable haproxy metrics

--- a/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
+++ b/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
@@ -96,6 +96,15 @@ frontend SSL_Termination
 
         default_backend homepage
 
+# Enable haproxy stats page and metrics
+frontend stats
+   bind *:8404
+   option http-use-htx
+   http-request use-service prometheus-exporter if { path /metrics }
+   stats enable
+   stats uri /stats
+   stats refresh 10s
+
 # Home OpenShift cluster
 backend home_ssl
 	mode tcp
