--- a/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
+++ b/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
@@ -99,7 +99,7 @@ frontend SSL_Termination
 # Enable haproxy stats page and metrics
 frontend stats
    bind *:8404
-   option http-use-htx
+#   option http-use-htx
    http-request use-service prometheus-exporter if { path /metrics }
    stats enable
    stats uri /stats
