Add mode http to get stats going

--- a/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
+++ b/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
@@ -98,6 +98,7 @@ frontend SSL_Termination
 
 # Enable haproxy stats page and metrics
 frontend stats
+   mode http
    bind *:8404
 #   option http-use-htx
    http-request use-service prometheus-exporter if { path /metrics }
