Add more customapi widgets for keycloak and Argo CD

--- a/configure-infra-server.yaml
+++ b/configure-infra-server.yaml
@@ -22,3 +22,4 @@
     # - {role: install-keycloak}
     # - {role: install-uptime-kuma}
     - {role: install-homepage}
+    # - {role: install-prometheus}
