--- a/configure-infra-server.yaml
+++ b/configure-infra-server.yaml
@@ -18,8 +18,9 @@
     # - {role: mprahl.lets-encrypt-route-53, ler53_cert_common_name: sso.ocplab.com, become: yes}
     # - {role: mprahl.lets-encrypt-route-53, ler53_cert_common_name: uptime.ocplab.com, become: yes}
     # - {role: mprahl.lets-encrypt-route-53, ler53_cert_common_name: ocplab.com, become: yes}
+    # - {role: update-cert-permissions}
     # - {role: install-postgresql}
     # - {role: install-keycloak}
     # - {role: install-uptime-kuma}
-    - {role: install-homepage}
+    # - {role: install-homepage}
     # - {role: install-prometheus}
