Add role to sync route 53 addresses

--- a/configure-infra-server.yaml
+++ b/configure-infra-server.yaml
@@ -24,3 +24,4 @@
     # - {role: install-uptime-kuma}
     # - {role: install-homepage}
     # - {role: install-prometheus}
+    # - {role: update-route-53-addresses}
