--- a/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
+++ b/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
@@ -71,20 +71,23 @@ backend hub_http
 # Handles port 443 for OpenShift wildcard, sso and terminating SSL for others
 #---------------------------------------------------------------------
 frontend wildcard_ssl
-	bind :443
-	mode tcp
-	option tcplog
+    bind :443
+    mode tcp
+    option tcplog
 
-	# Wait for a client hello for at most 5 seconds
-	tcp-request inspect-delay 5s
-	tcp-request content accept if { req_ssl_hello_type 1 }
+    # Wait for a client hello for at most 5 seconds
+    tcp-request inspect-delay 5s
+    tcp-request content accept if { req_ssl_hello_type 1 }
 
-	use_backend home_ssl if { req_ssl_sni -m end .apps.home.ocplab.com }
-	use_backend hub_ssl if { req_ssl_sni -m end .apps.hub.ocplab.com }
+    acl internal_ip src 192.168.1.0/24
+
+    use_backend home_ssl if { req_ssl_sni -m end .apps.home.ocplab.com }
+    use_backend hub_ssl if { req_ssl_sni -m end .apps.hub.ocplab.com }
     use_backend sso_ssl if { req_ssl_sni -i sso.ocplab.com }
+    use_backend cockpit if { req_ssl_sni -i cockpit.ocplab.com } internal_ip
 
     # Route back to haproxy to handle SSL termination for non-passthrough sites
-	default_backend bk_tcp_to_https
+    default_backend bk_tcp_to_https
 
 # Provide SSL Termination for sites that only handle http
 frontend SSL_Termination
@@ -95,6 +98,15 @@ frontend SSL_Termination
         use_backend uptime if { hdr(host) -i uptime.ocplab.com }
 
         default_backend homepage
+
+#---------------------------------------------------------------------
+# Cockpit
+#---------------------------------------------------------------------
+backend cockpit
+        mode http
+        server cockpit 192.168.1.2:7070 check
+        http-request set-header X-Forwarded-Port %[dst_port]
+        http-request add-header X-Forwarded-Proto https if { ssl_fc }
 
 # Enable haproxy stats page and metrics
 frontend stats
@@ -108,15 +120,15 @@ frontend stats
 
 # Home OpenShift cluster
 backend home_ssl
-	mode tcp
-	balance roundrobin
-	server home_ssl_server 192.168.1.83:443 check
+    mode tcp
+    balance roundrobin
+    server home_ssl_server 192.168.1.83:443 check
 
 # Hub OpenShift cluster
 backend hub_ssl
-	mode tcp
-	balance roundrobin
-	server hub_ssl_server 192.168.1.217:443 check
+    mode tcp
+    balance roundrobin
+    server hub_ssl_server 192.168.1.217:443 check
 
 # Uptime-kuma
 backend uptime
