Fix up cockpit config, allow for only internal IPs

--- a/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
+++ b/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
@@ -84,7 +84,7 @@ frontend wildcard_ssl
     use_backend home_ssl if { req_ssl_sni -m end .apps.home.ocplab.com }
     use_backend hub_ssl if { req_ssl_sni -m end .apps.hub.ocplab.com }
     use_backend sso_ssl if { req_ssl_sni -i sso.ocplab.com }
-    use_backend cockpit if { req_ssl_sni -i cockpit.ocplab.com } internal_ip
+    use_backend cockpit_ssl if { req_ssl_sni -i cockpit.ocplab.com } internal_ip
 
     # Route back to haproxy to handle SSL termination for non-passthrough sites
     default_backend bk_tcp_to_https
@@ -102,11 +102,11 @@ frontend SSL_Termination
 #---------------------------------------------------------------------
 # Cockpit
 #---------------------------------------------------------------------
-backend cockpit
-        mode http
-        server cockpit 192.168.1.2:7070 check
-        http-request set-header X-Forwarded-Port %[dst_port]
-        http-request add-header X-Forwarded-Proto https if { ssl_fc }
+backend cockpit_ssl
+        mode tcp
+        balance roundrobin
+        server cockpit_ssl_server 192.168.1.2:7070 check
+
 
 # Enable haproxy stats page and metrics
 frontend stats
