Update config to proxy microshift

--- a/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
+++ b/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
@@ -32,6 +32,7 @@ frontend api_ssl
 
         use_backend home_api_ssl if { req_ssl_sni -i api.home.ocplab.com }
         use_backend hub_api_ssl if { req_ssl_sni -i api.hub.ocplab.com }
+        use_backend microshift_api_ssl if { req_ssl_sni -i api.microshift.ocplab.com }
 
         default_backend static
 
@@ -45,6 +46,11 @@ backend hub_api_ssl
         balance roundrobin
         server hub_ssl_server 192.168.1.217:6443 check
 
+backend microshift_api_ssl
+        mode tcp
+        balance roundrobin
+        server microshift_ssl_server 192.168.1.5:6443 check
+
 #---------------------------------------------------------------------
 # Proxys to the openshift wildcard backend port 80
 #---------------------------------------------------------------------
@@ -54,6 +60,7 @@ frontend wildcard_http
 
         use_backend home_http if { hdr(host) -m end .apps.home.ocplab.com }
         use_backend hub_http if { hdr(host) -m end .apps.hub.ocplab.com }
+        use_backend microshift_http if { hdr(host) -m end .apps.microshift.ocplab.com }
 
         default_backend static
 
@@ -66,6 +73,11 @@ backend hub_http
         mode http
         balance roundrobin
         server hub_http_server 192.168.1.217:80 check
+
+backend microshift_http
+        mode http
+        balance roundrobin
+        server microshift_http_server 192.168.1.5:80 check
 
 #---------------------------------------------------------------------
 # Handles port 443 for OpenShift wildcard, sso and terminating SSL for others
@@ -83,6 +95,7 @@ frontend wildcard_ssl
 
     use_backend home_ssl if { req_ssl_sni -m end .apps.home.ocplab.com }
     use_backend hub_ssl if { req_ssl_sni -m end .apps.hub.ocplab.com }
+    use_backend microshift_ssl if { req_ssl_sni -m end .apps.microshift.ocplab.com }
     use_backend sso_ssl if { req_ssl_sni -i sso.ocplab.com }
     use_backend cockpit_ssl if { req_ssl_sni -i cockpit.ocplab.com } internal_ip
 
@@ -129,6 +142,12 @@ backend hub_ssl
     mode tcp
     balance roundrobin
     server hub_ssl_server 192.168.1.217:443 check
+
+# Microshift cluster
+backend microshift_ssl
+    mode tcp
+    balance roundrobin
+    server hub_ssl_server 192.168.1.5:443 check
 
 # Uptime-kuma
 backend uptime
