--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,4 +1,5 @@
 collections:
   - name: kewlfft.aur
   - name: community.general
+#  - name:  community.libvirt
 #  - name: mprahl.lets-encrypt-route-53
