--- a/roles/install-pi-hole/tasks/main.yaml
+++ b/roles/install-pi-hole/tasks/main.yaml
@@ -3,11 +3,7 @@
     name: "{{ item }}"
     state: present
   with_items:
-    - pi-hole-server
-    - pi-hole-ftl
-    - php-sqlite
-    - php-cgi
-    - lighttpd
+    - pi-hole-core
   become: yes
   become_user: aur_builder
 
@@ -37,73 +33,32 @@
     - "--chown=root:root"
   become: yes
 
-- name: disable pi.hole rate limit
-  lineinfile:
-    dest: /etc/pihole/pihole-FTL.conf
-    line: "RATE_LIMIT=0/0"
-    state: present
+- name: copy ocplab dns-masq configuration
+  synchronize:
+    src: ./etc/dnsmasq.d/00-ocplab.conf
+    dest: /etc/dnsmasq.d/00-ocplab.conf
+    rsync_opts:
+    - "--chown=root:root"
   become: yes
 
-- name: Copy lighttpd config file from pi.hole
-  ansible.builtin.copy:
-    src: /usr/share/pihole/configs/lighttpd.example.conf
-    dest: /etc/lighttpd/lighttpd.conf
-    remote_src: yes
+- name: copy uptime dns-masq configuration
+  synchronize:
+    src: ./etc/dnsmasq.d/00-uptime.conf
+    dest: /etc/dnsmasq.d/00-uptime.conf
+    rsync_opts:
+    - "--chown=root:root"
   become: yes
 
-- name: Set lighttpd port to 8080
-  replace:
-    path: /etc/lighttpd/external.conf
-    regexp: 'server.port[[:blank:]]\+=80'
-    replace: "server.port = 8080"
-
-# This does not work for some reason
-# - name: Set lighttpd port to 8080
-#   synchronize:
-#     src: ./etc/lighttpd/external.conf
-#     dest: /etc/lighttpd/external.conf
-#     rsync_opts:
-#     - "--chown=root:root"
-#   become: yes
-
-- name: install php-cgi
-  kewlfft.aur.aur:
-    name: php-cgi
-    state: present
+- name: Copy pihole.toml
+  synchronize:
+    src: ./etc/pihole/pihole.toml
+    dest: /etc/pihole/pihole.toml
+    rsync_opts:
+    - "--chown=root:root"
   become: yes
-  become_user: aur_builder
-
-- name: Set open_basedir for PHP
-  become: true
-  ini_file:
-    dest: /etc/php/php.ini
-    section: "PHP"
-    option: "open_basedir"
-    value: "/srv/http/pihole:/run/pihole-ftl/pihole-FTL.port:/run/log/pihole/pihole.log:/run/log/pihole-ftl/pihole-FTL.log:/etc/pihole:/etc/hosts:/etc/hostname:/etc/dnsmasq.d/02-pihole-dhcp.conf:/etc/dnsmasq.d/03-pihole-wildcard.conf:/etc/dnsmasq.d/04-pihole-static-dhcp.conf:/var/log/lighttpd/error-pihole.log:/proc/loadavg:/proc/meminfo:/proc/cpuinfo:/sys/class/thermal/thermal_zone0/temp:/tmp"
-
-- name: Enabled extensions
-  become: true
-  ini_file:
-    dest: /etc/php/php.ini
-    section: "PHP"
-    exclusive: false
-    no_extra_spaces: true
-    option: "extension"
-    value: "{{ item }}"
-  with_items:
-    - sqlite3
-    - pdo_sqlite
-    - sockets
 
 - name: Start pi-hole
   systemd:
     name: pihole-FTL.service
-    state: started
-  become: yes
-
-- name: Enable lighttpd
-  systemd:
-    name: lighttpd.service
-    enabled: true
     state: started
   become: yes
