--- a/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
+++ b/roles/install-haproxy/files/etc/haproxy/haproxy.cfg
@@ -109,6 +109,8 @@ frontend SSL_Termination
         #bind *:9443 ssl crt /etc/ssl/uptime.ocplab.com/uptime.ocplab.com.pem crt /etc/ssl/ocplab.com/ocplab.com.pem
 
         use_backend uptime if { hdr(host) -i uptime.ocplab.com }
+        use_backend jellyfin if { hdr(host) -i jellyfin.ocplab.com }
+        use_backend homeassistant if { hdr(host) -i homeassistant.ocplab.com }
 
         default_backend homepage
 
@@ -159,6 +161,20 @@ backend uptime
 backend homepage
         mode http
         server homepage 192.168.1.2:7080 check
+        http-request set-header X-Forwarded-Port %[dst_port]
+        http-request add-header X-Forwarded-Proto https if { ssl_fc }
+
+backend jellyfin
+        mode http
+        balance
+        server homepage 192.168.1.2:8096 check
+        http-request set-header X-Forwarded-Port %[dst_port]
+        http-request add-header X-Forwarded-Proto https if { ssl_fc }
+
+backend homeassistant
+        mode http
+        balance
+        server homepage 192.168.1.2:8123 check
         http-request set-header X-Forwarded-Port %[dst_port]
         http-request add-header X-Forwarded-Proto https if { ssl_fc }
 
