--- a/roles/install-haproxy/tasks/main.yaml
+++ b/roles/install-haproxy/tasks/main.yaml
@@ -2,7 +2,7 @@
   kewlfft.aur.aur:
     name: haproxy
     state: present
-  become: yes
+  become: true
   become_user: aur_builder
 
 - name: copy haproxy configuration
@@ -11,7 +11,7 @@
     dest: /etc/haproxy/{{ item }}
     rsync_opts:
     - "--chown=root:root"
-  become: yes
+  become: true
   with_items:
     - haproxy.cfg
     - crt-list.txt
@@ -24,16 +24,18 @@
     src: /etc/ssl/{{ item }}/{{ item }}.key
     dest: /etc/ssl/{{ item }}/{{ item }}.pem.key
     state: link
-  become: yes
+  become: true
   with_items:
   - uptime.ocplab.com
   - sso.ocplab.com
   - cockpit.ocplab.com
+  - jellyfin.ocplab.com
   - ocplab.com
+  - homeassistant.ocplab.com
 
 - name: Start and enable haproxy service
   systemd:
     name: haproxy.service
     enabled: true
     state: started
-  become: yes
+  become: true
